--- a/src/components/CardDeck/CardDeck.css
+++ b/src/components/CardDeck/CardDeck.css
@@ -2,6 +2,8 @@
     height: 100%;
     display: flex;
     overflow: hidden;
+    flex-direction: row;
+    justify-content: center;
 }
 
 .movies {
