--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -1,4 +1,6 @@
 #search {
+    margin-top: 6vh;
+    width: 100%;
     justify-self: center;
     grid-column: 2/3;
     grid-row: 2/3;
@@ -6,8 +8,9 @@
 }
 
 input {
+    width: 100%;
     text-align: center;
-    font-size: calc(8px + 2.5vw);
+    font-size: calc(5px + 2vw);
     border-top: none;
     border-left: none;
     border-right: none;
